# cmake-101

./: README.md  READNE.md
example1/: CMakeLists.txt  test.cpp
example2/include/: Student.h
example2/src/: Student.cpp  mainapp.cpp
example3/studentlib_shared/: CMakeLists.txt
example3/studentlib_static/: CMakeLists.txt
example4/: CMakeLists.txt
example4/studentlib_static/: CMakeLists.txt
example4/usestudentlib/: CMakeLists.txt  config.h.in
example5/: CMakeLists.txt
example5/studentlib_shared/: CMakeLists.txt
example5/usestudentlib/: CMakeLists.txt
example6/: CMakeLists.txt
